# lightswitch

./: CMakeLists.txt  README  build.sh  makefile
include/: Camera.h  Framebuffer.h  HitCheck.h  Illumination.h  Intersection.h  Light.h  Material.h  MaterialGenerator.h  Object.h  Phong.h  Plane.h  RT.h  Ray.h  RenderInfo.h  RenderJob.h  RenderThread.h  RenderWorker.h  Renderer.h  Scene.h  Sphere.h  Test.h  WindowWrapper.h
src/: Camera.cpp  Framebuffer.cpp  HitCheck.cpp  Illumination.cpp  Light.cpp  Material.cpp  MaterialGenerator.cpp  Object.cpp  Phong.cpp  Plane.cpp  Ray.cpp  RenderThread.cpp  RenderWorker.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  Test.cpp  WindowWrapper.cpp  main.cpp
